Menu: fix truncation related bugs (#985)

--- a/src/less/menu/base/menu.less
+++ b/src/less/menu/base/menu.less
@@ -72,10 +72,9 @@ div.menu__item[role^="menuitem"][aria-checked="true"] svg.icon {
 a.fake-menu__item span,
 button.fake-menu__item span,
 div.menu__item[role^="menuitem"] span {
-    .truncate();
-
     flex: 1 0 auto;
     text-align: left;
+    white-space: nowrap;
 }
 
 .menu__items--scroll[role="menu"] {
